1. Collection API Улучшения [#213566]