@@ -2,7 +2,6 @@ package collections;
 
 import org.junit.Test;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import static org.hamcrest.core.Is.is;
 import static org.junit.Assert.*;
@@ -13,7 +12,6 @@ public class ConvertListTest {
         List<int[]> in = new ArrayList<>();
         in.add(new int[] {1});
         in.add(new int[] {2, 3});
-        List<Integer> expect = Arrays.asList(1, 2, 3);
-        assertThat(ConvertList.convert(in), is(expect));
+        assertThat(ConvertList.convert(in), is(List.of(1, 2, 3)));
     }
 }
